<resources>
    <string name="app_name">Love Cosmetics</string>
    <string name="hi_sheraa">Hi Sheraa ,</string>
    <string name="welcome_to_our_store">Welcome to our store</string>
    <string name="images_desc">-</string>
    <string name="reviews">Reviews</string>
    <string name="details">Details</string>
    <string name="brand">BRAND</string>
    <string name="serial">Serial</string>
    <string name="material">Material</string>
    <string name="condition">Condition</string>
    <string name="category">Category</string>
    <string name="add_to_cart">ADD TO CART</string>
    <string name="cancel">CANCEL</string>
    <string name="total">TOTAL</string>
    <string name="checkout">CHECKOUT</string>
    <string name="place_order">PLACE ORDER</string>
    <string name="title_activity_finish_order">FinishOrder</string>
    <!--
    This string is used for square devices and overridden by hello_world in
    values-round/strings.xml for round devices.
    -->
    <string name="hello_world">Hello Square World!</string>
    <string name="register_now">Register Now</string>
    <string name="please_enter_your_full_name">Please enter your full name</string>
    <string name="please_enter_your_email">Please enter your email</string>
    <string name="please_enter_your_passsword">Please enter your passsword</string>
    <string name="submit">Submit</string>
    <string name="or_register">Or Register</string>
    <string name="item_is_added_successfully">Item is added Successfully</string>
    <string name="no_items_in_your_cart">No Items In Your Cart</string>

</resources>