<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.SignupActivity">

    <TextView
        android:id="@+id/signup_textview"
        android:text="@string/register_now"
        android:fontFamily="@font/bold"
        android:textSize="22sp"
        android:textColor="@color/colorPrimary"
        android:layout_marginTop="80dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <EditText
        android:id="@+id/fullname"
        android:hint="@string/please_enter_your_full_name"
        android:background="@drawable/view_background_form"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:nextFocusDown="@id/email"
        android:singleLine="true"
        android:imeOptions="actionNext"
        android:paddingStart="8dp"
        android:layout_marginTop="20dp"
        android:layout_marginStart="12dp"
        android:layout_marginEnd="12dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/signup_textview"/>
    <EditText
        android:id="@+id/email"
        android:hint="@string/please_enter_your_email"
        android:background="@drawable/view_background_form"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:nextFocusDown="@id/password"
        android:singleLine="true"
        android:imeOptions="actionNext"
        android:paddingStart="8dp"
        android:layout_marginTop="20dp"
        android:layout_marginStart="12dp"
        android:layout_marginEnd="12dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/fullname"/>

    <EditText
        android:id="@+id/password"
        android:hint="@string/please_enter_your_passsword"
        android:inputType="textPassword"
        android:background="@drawable/view_background_form"
        android:layout_width="match_parent"
        android:singleLine="true"
        android:imeOptions="actionNext"
        android:paddingStart="8dp"
        android:layout_height="50dp"
        android:layout_marginTop="20dp"
        android:layout_marginStart="12dp"
        android:layout_marginEnd="12dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/email"/>

    <Button
        android:id="@+id/submit_signup"
        android:text="@string/submit"
        android:textColor="@color/white"
        android:background="@drawable/view_background_button_rounded"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="20dp"
        android:layout_marginStart="12dp"
        android:layout_marginEnd="12dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/password"/>

</androidx.constraintlayout.widget.ConstraintLayout>