<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.LoginActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">


    <ImageView
        android:id="@+id/login_background"
        android:src="@drawable/ic_login_background"
        android:layout_width="wrap_content"
        android:layout_height="400dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        />

    <EditText
        android:id="@+id/email"
        android:hint="@string/please_enter_your_email"
        android:background="@drawable/view_background_form"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:nextFocusDown="@id/password"
        android:singleLine="true"
        android:imeOptions="actionNext"
        android:paddingStart="8dp"
        android:layout_marginTop="20dp"
        android:layout_marginStart="12dp"
        android:layout_marginEnd="12dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/login_background"/>

    <EditText
        android:id="@+id/password"
        android:hint="@string/please_enter_your_passsword"
        android:inputType="textPassword"
        android:background="@drawable/view_background_form"
        android:layout_width="match_parent"
        android:singleLine="true"
        android:imeOptions="actionNext"
        android:paddingStart="8dp"
        android:layout_height="50dp"
        android:layout_marginTop="20dp"
        android:layout_marginStart="12dp"
        android:layout_marginEnd="12dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/email"/>


    <Button
        android:id="@+id/submit_login"
        android:text="@string/submit"
        android:textColor="@color/white"
        android:background="@drawable/view_background_button_rounded"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="20dp"
        android:layout_marginStart="12dp"
        android:layout_marginEnd="12dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/password"/>

    <TextView
        android:id="@+id/or_register"
        android:text="@string/or_register"
        android:textColor="@color/colorPrimary"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginStart="12dp"
        android:layout_marginEnd="12dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/submit_login"/>

    </androidx.constraintlayout.widget.ConstraintLayout>


</ScrollView>