<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.ProductsDetailsActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/background_details"
        android:orientation="vertical"
        android:layout_marginTop="150dp"
        android:background="@drawable/flowerbackground"
        android:elevation="-20dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

    </LinearLayout>
    <ImageView
        android:id="@+id/back_arrow"
        android:layout_width="13.5dp"
        android:layout_height="22dp"
        android:layout_marginTop="19dp"
        android:layout_marginStart="35dp"
        android:src="@drawable/ic_backarrow"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/product_name_details"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="NNCR"
        android:textSize="12sp"
        android:textStyle="normal"
        android:fontFamily="@font/medium"
        android:textColor="@color/hintColor"
        android:layout_marginStart="119dp"
        app:layout_constraintTop_toTopOf="@id/back_arrow"
        app:layout_constraintBottom_toBottomOf="@id/back_arrow"
        app:layout_constraintStart_toEndOf="@id/back_arrow"/>
    <ImageView
        android:id="@+id/basket"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="42dp"
        android:src="@drawable/ic_basket"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/product_name_details" />

    <androidx.cardview.widget.CardView
        android:id="@+id/notification_number_container"
        android:layout_width="17dp"
        android:layout_height="15dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="6dp"
        app:cardBackgroundColor="@color/colorPrimary"
        app:cardCornerRadius="50dp"
        app:layout_constraintEnd_toEndOf="@id/basket"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/basket_counter"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="3"
                android:textColor="@color/appWhite"
                android:textSize="12sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>


    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/product_price_details"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="200"
        android:textSize="12sp"
        android:textStyle="normal"
        android:fontFamily="@font/medium"
        android:textColor="@color/colorPrimary"
        android:layout_marginStart="150dp"
        android:layout_marginTop="3dp"
        app:layout_constraintTop_toBottomOf="@id/product_name_details"
        app:layout_constraintStart_toStartOf="parent"/>
    <TextView
        android:id="@+id/product_le_details"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="LE"
        android:textSize="12sp"
        android:textStyle="normal"
        android:fontFamily="@font/medium"
        android:textColor="@color/colorPrimary"
        app:layout_constraintBottom_toBottomOf="@id/product_price_details"
        app:layout_constraintTop_toTopOf="@id/product_price_details"
        app:layout_constraintStart_toEndOf="@id/product_price_details"/>
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/product_rating"
        android:layout_width="33dp"
        android:layout_height="16dp"
        android:layout_marginStart="16dp"
        android:fontFamily="@font/bold"
        android:textColor="@color/colorPrimary"
        android:background="@drawable/view_background_rating"
        android:textSize="@dimen/font_text_large"
        app:layout_constraintStart_toEndOf="@id/product_price_details"
        app:layout_constraintTop_toTopOf="@id/product_price_details"
        android:orientation="horizontal"
        >

        <ImageView
            android:id="@+id/star"
            android:layout_width="9dp"
            android:layout_height="9dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="4dp"
            android:src="@drawable/ic_star"/>

        <TextView
            android:id="@+id/product_rating_details"
            android:layout_width="15dp"
            android:layout_height="12dp"
            android:text="4.9"
            android:textSize="9sp"
            android:textColor="@color/appWhite"
            android:fontFamily="@font/bold"
            app:layout_constraintStart_toEndOf="@id/star"
            app:layout_constraintTop_toTopOf="@id/star"
            app:layout_constraintBottom_toBottomOf="@id/star"
            app:layout_constraintEnd_toEndOf="parent"
            />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <com.smarteist.autoimageslider.SliderView
        android:id="@+id/imageSlider"
        android:layout_width="213dp"
        android:layout_height="195dp"
        android:layout_marginTop="120dp"
        app:sliderAnimationDuration="500"
        app:sliderAutoCycleDirection="back_and_forth"
        app:sliderAutoCycleEnabled="true"
        app:sliderIndicatorAnimationDuration="500"
        app:sliderIndicatorGravity="center_horizontal|top"
        app:sliderIndicatorOrientation="horizontal"
        app:sliderIndicatorRadius="2dp"
        app:sliderIndicatorSelectedColor="@color/colorPrimary"
        app:sliderIndicatorUnselectedColor="#EFEFF4"
        app:sliderStartAutoCycle="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:padding="10dp"
        android:id="@+id/linear1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="10dp"
        android:orientation="horizontal"
        android:weightSum="2"
        app:layout_constraintTop_toBottomOf="@id/imageSlider">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:text="@string/details"
            android:padding="5dp"
            android:background="@drawable/background_details_reviews"
            android:textColor="@color/colorPrimary"
            android:id="@+id/details_details"
            android:layout_marginEnd="5dp"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/reviews"
            android:padding="5dp"
            android:layout_weight="1"
            android:layout_marginStart="5dp"
            android:background="@drawable/background_details_reviews"
            android:textColor="@color/colorPrimary"
            android:id="@+id/reviews_details"
            />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/linear2"
        android:layout_marginStart="47dp"
        android:layout_marginEnd="48dp"
        android:layout_marginTop="28dp"
        android:orientation="vertical"
        app:layout_constraintTop_toBottomOf="@id/linear1"
        app:layout_constraintStart_toStartOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:weightSum="2"
            >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/brand"
                android:layout_weight="1.8"
                android:textSize="12sp"
                android:textStyle="normal"
                android:textColor="@color/colorPrimary"
                android:text="@string/brand"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/serial"
                android:layout_weight="1"
                android:textSize="12sp"
                android:textStyle="normal"
                android:textColor="@color/colorPrimary"
                android:text="@string/serial"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:weightSum="2"
            >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/name_product"
                android:layout_weight="1.8"
                android:textSize="12sp"
                android:textStyle="normal"
                android:textColor="@color/colorPrimary"
                android:text="name"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/serial_product"
                android:layout_weight="1"
                android:textSize="12sp"
                android:textStyle="normal"
                android:textColor="@color/colorPrimary"
                android:text="245788213"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:weightSum="2"
            android:layout_marginTop="16dp"
            >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/condition"
                android:layout_weight="1.8"
                android:textSize="12sp"
                android:textStyle="normal"
                android:textColor="@color/colorPrimary"
                android:text="@string/condition"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/material"
                android:layout_weight="1"
                android:textSize="12sp"
                android:textStyle="normal"
                android:textColor="@color/colorPrimary"
                android:text="@string/material"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:weightSum="2"
            >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/condition_product"
                android:layout_weight="1.8"
                android:textSize="12sp"
                android:textStyle="normal"
                android:textColor="@color/colorPrimary"
                android:text="Brand New, With Box"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/material_product"
                android:layout_weight="1"
                android:textSize="12sp"
                android:textStyle="normal"
                android:textColor="@color/colorPrimary"
                android:text="Lorem ipsum…"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:weightSum="2"
            android:layout_marginTop="16dp"
            >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/category"
                android:layout_weight="1.8"
                android:textSize="12sp"
                android:textStyle="normal"
                android:textColor="@color/colorPrimary"
                android:text="@string/category"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/lorem"
                android:layout_weight="1"
                android:textSize="12sp"
                android:textStyle="normal"
                android:textColor="@color/colorPrimary"
                android:text="Lorem ipsum"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:weightSum="2"
            >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/category_product"
                android:layout_weight="1.8"
                android:textColor="@color/colorPrimary"
                android:textSize="12sp"
                android:textStyle="normal"
                android:text="Cosmetics"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/Loremipsum"
                android:layout_weight="1"
                android:textColor="@color/colorPrimary"
                android:textSize="12sp"
                android:textStyle="normal"
                android:text="Lorem ipsum…"/>
        </LinearLayout>
    </LinearLayout>


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:id="@+id/linearbuttons"
        android:orientation="horizontal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/linear2">
        <Button
            android:layout_width="143dp"
            android:layout_height="40dp"
            android:id="@+id/cancel"
            android:background="@drawable/curved_button"
            android:textStyle="normal"
            android:text="@string/cancel"
            android:layout_marginEnd="10dp"
            android:textColor="@color/colorPrimary"
            />
        <Button
            android:layout_width="143dp"
            android:layout_height="40dp"
            android:id="@+id/addtocart"
            android:background="@drawable/curved_button"
            android:textStyle="normal"
            android:layout_marginStart="10dp"
            android:text="@string/add_to_cart"
            android:textColor="@color/colorPrimary"
            />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="47dp"
        android:layout_marginEnd="48dp"
        android:layout_marginTop="28dp"
        android:orientation="vertical"
        app:layout_constraintTop_toBottomOf="@id/linear1"
        app:layout_constraintStart_toStartOf="parent">

        <androidx.recyclerview.widget.RecyclerView
            android:layout_width="match_parent"
            android:layout_height="300dp"
            android:id="@+id/reviews_list"
            android:visibility="gone"/>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>